--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^5.1.1",
     "hapi": "^13.4.1",
     "hapi-auth-cookie": "^6.1.1",
+    "hoek": "^4.0.0",
     "lab": "^8.0.2"
   },
   "dependencies": {
